feat: Added spacing and edited formatting

--- a/p1-web-dev-portfolio/src/index.html
+++ b/p1-web-dev-portfolio/src/index.html
@@ -50,7 +50,7 @@
           <h2>Skills</h2>
           <article>Here are some of the Technologies we used while we are on Uplift. We used HTML for adding web content
             and CSS to personalize for designing and styling our websites. We also learned Javascript along with it's
-            concept and features like React, Angular and Databases.</article>
+            concept and features like React, Angular, Nodes and Database.</article>
           <div class="skills">
             <div class="skills-icon">
               <label>HTML</label>
@@ -124,7 +124,7 @@
                 <div class="email">
                   <i class="fa-solid fa-envelope"></i>
                   <label>faustinomarjj@gmail.com</label>
-                </div>  
+                </div>
               </div>
               <div class="button">
                 <div class="message">
